Creating Other pages and parts

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -1,1 +1,6 @@
-<p>dashboard works!</p>
+<main class="pt-20">
+<router-outlet></router-outlet>
+
+</main>
+<p class="p-1  text-[#969ba4b1]">Copyright &copy; CIC LLC</p>
+
