--- a/src/app/pages/layout/layout.html
+++ b/src/app/pages/layout/layout.html
@@ -1,1 +1,42 @@
-<p>layout works!</p>
+<main class="relative ">
+     <div class="dropdown-container absolute  top-5 right-5 text-left">
+        <button
+            (click)="toggleDropdown()"
+            class="px-3 flex items-center border border-gray-[350] transition duration-200 cursor-pointer text-gray-400 rounded-lg hover:bg-black/10 hover:border-gray-500"
+        >
+            <i class="bi bi-person mr-3 text-[#6045e2] rounded-sm py-1 px-2"></i>
+            <span class="text-sm">{{userName}}</span>
+            @if (!isOpen) {
+            <i class="bi bi-chevron-down ml-3"></i>
+            } @else {
+            <i class="bi bi-chevron-up ml-3"></i>
+            }
+        </button>
+
+    @if (isOpen) {
+        <div
+        class="absolute right-0 mt-2 w-48 bg-white border border-gray-300 rounded-lg shadow-lg z-10"
+        >
+            <a
+                href=""
+                class="block px-4 py-2 text-gray-700 hover:bg-black/5"
+                (click)="closeDropdown()"
+                >Profile</a
+            >
+            <a
+                href=""
+                class="block px-4 py-2 text-gray-700 hover:bg-black/5"
+                (click)="closeDropdown()"
+                >Settings</a
+            >
+            <a
+                
+                class="block px-4 py-2 cursor-pointer text-gray-700 hover:bg-black/5"
+                (click)="closeDropdown(); logout()"
+                >Logout</a
+            >
+        </div>
+    }
+    </div>
+</main>
+<app-sidebar></app-sidebar>
