3rd stage include request create , request single

--- a/src/app/components/button/button.html
+++ b/src/app/components/button/button.html
@@ -1,4 +1,6 @@
-<button class="rounded-sm text-[12px] cursor-pointer font-semibold hover:bg-[{{color}}] hover:text-white transition duration-300 border border-{{color}} text-[{{color}}] uppercase w-full py-0.5"
+<button
+  class="btn rounded-sm text-[12px] cursor-pointer font-semibold transition duration-300 uppercase w-full py-0.5 border"
+  style.--btn-color="{{color}}"
 >
-    {{children}}
+  {{ children }}
 </button>
