--- a/src/app/pages/dashboard/pages/reports/reports.html
+++ b/src/app/pages/dashboard/pages/reports/reports.html
@@ -1,1 +1,13 @@
-<p>reports works!</p>
+<main class="h-fit py-5">
+    <h1 class=" w-full text-xl font-semibold">Hesabat</h1>
+  
+
+    <div class="flex justify-between items-center">
+        <app-datepicker></app-datepicker>
+
+        <a routerLink="/dashboard/requests/createRequest" class="bg-[#6562F0] w-[15%] text-sm flex items-end cursor-pointer hover:bg-[#1613be] justify-center  rounded-md py-2 h-fit text-white">
+            <i class="bi flex  bi-plus text-lg  "></i> <span class="p-0">Sorğu yarat</span>
+        </a>
+    </div>
+
+</main>
