--- a/src/app/components/datepicker/datepicker.html
+++ b/src/app/components/datepicker/datepicker.html
@@ -1,1 +1,14 @@
-<p>datepicker works!</p>
+<div class="small-datepicker w-1/3">
+  <mat-form-field>
+      <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+          <input matStartDate formControlName="start" placeholder="01/10/2021">
+          <input matEndDate formControlName="end" placeholder="04/11/2021">
+      </mat-date-range-input>
+      <mat-datepicker-toggle matIconSuffix [for]="picker">
+        <mat-icon matDatepickerToggleIcon>
+          <i class="bi bi-calendar-range-fill text-sm text-gray-400"></i>
+        </mat-icon>
+      </mat-datepicker-toggle>
+      <mat-date-range-picker #picker></mat-date-range-picker>
+  </mat-form-field>
+</div>
