--- a/src/app/pages/dashboard/pages/profile/profile.html
+++ b/src/app/pages/dashboard/pages/profile/profile.html
@@ -2,7 +2,7 @@
     <h1 class="w-full text-xl font-semibold">Profil</h1>
 
     <section class="profil-photo w-1/2 flex  justify-items-start flex-col gap-y-0.5 justify-center">
-        <img [src]="photoUrl" loading="lazy" height="150" width="150" class="h-32 w-fit object-cover" alt="Profile Photo">
+        <img [src]="photoUrl? photoUrl:'./photos/default_profile_p.jpg'" loading="lazy" height="150" width="150" class="h-32 w-fit object-cover" alt="Profile Photo">
         <div class="flex w-fit gap-3">
             <div class=" py-2 px-1 w-fit">
               @if (selectedFileName!='') {
