--- a/src/app/pages/dashboard/pages/reports/reports.html
+++ b/src/app/pages/dashboard/pages/reports/reports.html
@@ -1,202 +1,162 @@
 <main class="h-fit py-5">
-    <h1 class=" w-full text-xl font-semibold">Hesabat</h1>
-  
+  <h1 class=" w-full text-xl font-semibold">Hesabat</h1>
 
-    <!-- Date filter -->
-    <div class="flex justify-between mt-6 items-center">
-        <div class="flex items-baseline  gap-x-2">
-            <p class="text-sm">Tarix aralığı</p>
-            <app-datepicker (rangeChange)="onDateChange()"></app-datepicker>
-        </div>
-
-        <a (click)="exportToExcel()"  class="bg-[#6562F0] w-[15%] text-sm flex items-end cursor-pointer hover:bg-[#1613be] justify-center  rounded-md py-2 h-fit text-white">
-            Excel faylına köçür
-        </a>
+  <!-- Date filter -->
+  <div class="flex justify-between mt-6 items-center">
+    <div class="flex items-baseline gap-x-2">
+      <p class="text-sm">Tarix aralığı</p>
+      <app-datepicker (rangeChange)="onDateChange()"></app-datepicker>
     </div>
 
-    <div class="px-4">
-        <div class="flex justify-start w-1/4  pt-12 gap-x-4  items-baseline">
-            <p class="text-sm">Göstərilir</p>
-            <div class="relative mt-2 w-1/4">
-                    <select
-                        [(ngModel)]="selectedStatus"
-                        (ngModelChange)="selectedStatus=+$event"
-                        (change)="onItemsPerPageChange()"
-                        class="appearance-none px-3 py-1.5 w-full border border-black/20 cursor-pointer rounded-sm text-sm text-black outline-none"
-                    >
-                        <option [value]="5">5</option>
-                        <option [value]="10">10</option>
-                        <option [value]="15">15</option>
-                        <option [value]="20">20</option>
-                        <option [value]="30">30</option>
-                    </select>
+    <a
+      (click)="exportToExcel()"
+      class="bg-[#6562F0] w-[15%] text-sm flex items-end cursor-pointer hover:bg-[#1613be]
+             justify-center rounded-md py-2 h-fit text-white">
+      Excel faylına köçür
+    </a>
+  </div>
 
-                    <span class="absolute right-3 top-1/2 -translate-y-1/2 pointer-events-none text-gray-500">
-                        <i class="bi bi-chevron-down "></i>
-                    </span>
+  <div class="px-4">
+    <div class="flex justify-start w-1/4 pt-12 gap-x-4 items-baseline">
+      <p class="text-sm">Göstərilir</p>
 
-            </div>
-            <p>sorğu</p>
-        </div>
+      <div class="relative mt-2 w-1/4">
+        <select
+          [(ngModel)]="pageSize"
+          (change)="onItemsPerPageChange()"
+          class="appearance-none px-3 py-1.5 w-full border border-black/20 cursor-pointer rounded-sm text-sm text-black outline-none">
+          <option [value]="5">5</option>
+          <option [value]="10">10</option>
+          <option [value]="15">15</option>
+          <option [value]="20">20</option>
+          <option [value]="30">30</option>
+        </select>
 
-        <div class="px-2 py-5 w-full bg-gray-100 h-fit">
-            <!-- Table container -->
-            <div class="overflow-x-auto bg-white shadow-md rounded-lg">
-                
-                <!-- Table headers with sort arrows -->
-                <table class="min-w-full divide-y divide-gray-200">
-                    <thead class="bg-gray-50">
-                        <tr>
-                            @for (col of columns ; track col) {
-                            
-                                <th class="px-3 py-2 text-left text-xs font-medium text-gray-700 whitespace-nowrap">
-                                    <div class="flex justify-between items-center gap-x-3">
-                                        <span>{{ col.label }}</span>
-                                        <div class="flex justify-center cursor-pointer flex-shrink-0">
-                                            <i class="bi bi-arrow-down-up text-gray-400 hover:text-gray-700" (click)="sort(col.key)"></i>
-                                        </div>
-                                    </div>
-                                </th>
-                            }
-                        </tr>
+        <span class="absolute right-3 top-1/2 -translate-y-1/2 pointer-events-none text-gray-500">
+          <i class="bi bi-chevron-down"></i>
+        </span>
+      </div>
 
-                        <tr>
-                            @for (col of columns ; track col) {
-                            
-                                <th class="px-1 py-2">
-                                    <input
-                                    type="text"
-                                    [(ngModel)]="searchText"
-                                    placeholder="Search..."
-                                    class="w-full p-2 border border-gray-300 rounded 
-                                    mb-4
-                                    focus:outline-none focus:ring-1 focus:ring-gray-500 focus:border-gray-500 text-[12px] font-normal"
-                                    />
-                                </th>
-                            }
-                            
-                        </tr>
-                    </thead>
-
-                    <tbody class="divide-y divide-gray-200 bg-white">
-                        @for (row of getTableData(); track row) {
-                            <tr>
-                                @for (col of columns; track col) {
-                                <td  class="px-3 text-left py-3 text-sm text-gray-700 cursor-pointer">
-
-                                    @if (STATUS_MAP[row[col.key] ?? '']) {
-                                    <app-button 
-                                        [color]="STATUS_MAP[row[col.key]!]"
-                                        [children]="row[col.key] + ''">
-                                    </app-button>
-                                    }
-                                    @else {
-                                    @if (col.key === 'text') {
-                                        <span class="max-w-xs text-sm text-gray-700 overflow-hidden break-words line-clamp-3 block">
-                                        {{ row[col.key] }}
-                                        </span>
-                                    }
-                                    @else {
-                                        {{ row[col.key] }}
-                                    }
-                                    }
-
-                                </td>
-                                }
-                            </tr>
-                        }
-
-                    </tbody>
-                </table>
-
-            </div>
-        </div>
+      <p>sorğu</p>
     </div>
-     <!-- Table Filter dropdown -->
-    
-    <div class="end-content flex justify-between w-full">
-        <p class="px-2 text-gray-700 text-sm">{{totalReports}} nəticədən 1-{{selectedStatus+1}} aralığı göstərlir.</p>
 
+    <div class="px-2 py-5 w-full bg-gray-100 h-fit">
+      <div class="overflow-x-auto bg-white shadow-md rounded-lg">
 
-        <!-- Pagination -->
-        <nav aria-label="Page navigation">
-            <ul class="pagination flex gap-0.5 justify-content-end select-none text-sm">
-            <!-- Previous -->
-                <li
-                class="page-item px-2 py-1.5 rounded-md transition duration-400 hover:bg-[#55539F] hover:text-white font-semibold"
-                [class.opacity-50]="currentPage === 1"
-                >
-                    <button
-                        class="page-link cursor-pointer"
-                        (click)="changePage(currentPage - 1)"
-                        [disabled]="currentPage === 1"
-                    >
-                        <i class="bi bi-chevron-left"></i>
-                    </button>
-                </li>
+        <table class="min-w-full divide-y divide-gray-200">
+          <thead class="bg-gray-50">
+            <tr>
+              @for (col of columns; track col) {
+                <th class="px-3 py-2 text-left text-xs font-medium text-gray-700 whitespace-nowrap">
+                  <div class="flex justify-between items-center gap-x-3">
+                    <span >{{ col.label }}</span>
+                    <div (click)="onSort(col.key)" class="flex justify-center cursor-pointer flex-shrink-0">
+                        <i class="bi bi-arrow-down-up text-gray-400"></i>
+                    </div>
+                  </div>
+                </th>
+              }
+            </tr>
 
-                <!-- Previous Ellipsis -->
-                @if (startPage > 1) {
-                
-                    <li
-                    
-                    class="page-item px-2 py-1.5 rounded-md transition duration-300 hover:bg-[#55539F] hover:text-white"
-                    >
-                        <button
-                            class="page-link cursor-pointer"
-                            (click)="showPreviousGroup()"
-                        >
-                            …
-                        </button>
-                    </li>
+            <tr>
+              @for (col of columns; track col) {
+                <th class="px-1 py-2">
+                  <input
+                    type="text"
+                    [(ngModel)]="searchText[col.key]"
+                    (ngModelChange)="onSearchChange()"
+                    placeholder="Search..."
+                    class="w-full p-2 border border-gray-300 rounded mb-4
+                           focus:outline-none focus:ring-1 focus:ring-gray-500
+                           focus:border-gray-500 text-[12px] font-normal" />
+                </th>
+              }
+            </tr>
+          </thead>
+
+          <tbody class="divide-y divide-gray-200 bg-white">
+            @for (row of data; track row.id) {
+              <tr>
+                @for (col of columns; track col) {
+                  <td class="px-3 text-left py-3 text-sm text-gray-700 ">
+
+                    @if (STATUS_MAP[row[col.key] ?? '']) {
+                      <app-button
+                        [color]="STATUS_MAP[row[col.key]!]"
+                        [children]="row[col.key] + ''">
+                      </app-button>
+                    }
+                    @else {
+                      {{ row[col.key] }}
+                    }
+
+                  </td>
                 }
+              </tr>
+            }
+          </tbody>
+        </table>
 
-                <!-- Page Numbers -->
-                @for (page of visiblePages; track page) {
-                
-                    <li
-                    class="page-item px-3 py-1.5 rounded-md transition duration-300 cursor-pointer"
-                    [ngClass]="{
-                        'bg-[#55539F] text-white': page === currentPage,
-                        'hover:bg-[#55539F] hover:text-white': page !== currentPage
-                    }"
-                    >
-                        <button class="page-link cursor-pointer" (click)="changePage(page)">
-                            {{ page }}
-                        </button>
-                    </li>
-                }
-
-                <!-- Next Ellipsis -->
-                <li
-                *ngIf="endPage < totalPages"
-                class="page-item px-2 py-1.5 rounded-md transition duration-300 hover:bg-[#55539F] hover:text-white"
-                >
-                    <button
-                        class="page-link cursor-pointer"
-                        (click)="showNextGroup()"
-                    >
-                        …
-                    </button>
-                </li>
-
-                <!-- Next -->
-                <li
-                class="page-item px-2 py-1.5 rounded-md hover:bg-[#55539F] hover:text-white font-semibold"
-                [class.opacity-50]="currentPage === totalPages"
-                >
-                    <button
-                        class="page-link cursor-pointer"
-                        (click)="changePage(currentPage + 1)"
-                        [disabled]="currentPage === totalPages"
-                    >
-                        <i class="bi bi-chevron-right"></i>
-                    </button>
-                </li>
-            </ul>
-        </nav>
+      </div>
     </div>
+  </div>
 
+  <div class="end-content flex justify-between w-full">
+    <p class="px-2 text-gray-700 text-sm">
+      {{ totalCount }} nəticədən
+      {{ (page - 1) * pageSize + 1 }} –
+      {{ Math.min(page * pageSize, totalCount) }}
+      aralığı göstərilir
+    </p>
 
+    <nav aria-label="Page navigation">
+      <ul class="pagination flex gap-0.5 justify-content-end select-none text-sm">
 
+        <li
+          class="page-item px-2 py-1.5 rounded-md transition duration-400 hover:bg-[#55539F] hover:text-white font-semibold"
+          [class.opacity-50]="currentPage === 1">
+          <button
+            class="page-link cursor-pointer"
+            (click)="changePage(currentPage - 1)"
+            [disabled]="currentPage === 1">
+            <i class="bi bi-chevron-left"></i>
+          </button>
+        </li>
+
+        @if (startPage > 1) {
+          <li class="page-item px-2 py-1.5 rounded-md hover:bg-[#55539F] hover:text-white">
+            <button (click)="showPreviousGroup()">…</button>
+          </li>
+        }
+
+        @for (p of visiblePages; track p) {
+          <li
+            class="page-item px-3 py-1.5 rounded-md cursor-pointer"
+            [ngClass]="{
+              'bg-[#55539F] text-white': p === currentPage,
+              'hover:bg-[#55539F] hover:text-white': p !== currentPage
+            }">
+            <button (click)="changePage(p)">{{ p }}</button>
+          </li>
+        }
+
+        @if (endPage < totalPages) {
+          <li class="page-item px-2 py-1.5 rounded-md hover:bg-[#55539F] hover:text-white">
+            <button (click)="showNextGroup()">…</button>
+          </li>
+        }
+
+        <li
+          class="page-item px-2 py-1.5 rounded-md hover:bg-[#55539F] hover:text-white font-semibold"
+          [class.opacity-50]="currentPage === totalPages">
+          <button
+            (click)="changePage(currentPage + 1)"
+            [disabled]="currentPage === totalPages">
+            <i class="bi bi-chevron-right"></i>
+          </button>
+        </li>
+
+      </ul>
+    </nav>
+  </div>
 </main>
